css : fix content stretching

--- a/static/theme-flex/style.css
+++ b/static/theme-flex/style.css
@@ -131,11 +131,30 @@ nav {
 }
 
 section.page{
-  flex: 1;  
+    flex: 1; 
+      /* previous syntax */
+    display: -webkit-box;
+    display: -moz-box;
+    display: box;
+
+    -webkit-box-orient: vertical;
+    -moz-box-orient: vertical;
+    -ms-box-orient: vertical;
+    box-orient: vertical;
+
+    /* current syntax */
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: flex;
+
+    -webkit-flex-direction: column;
+    -moz-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
 }
 
 article {
-
     padding: 0em 2em;
 
     /* previous syntax */
